--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Hola desde HTML</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sapiente, nam dolores fugiat voluptate earum repellat ipsa 
+        possimus sit quia error voluptatibus omnis harum. Odio, 
+        doloremque maiores ipsam itaque voluptate ipsum.</p>
 </body>
 </html>
