Cambie el H1 del index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola desde HTML</h1>
+    <h1>Hola HTML</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         11111 fugiat voluptate earum repellat ipsa 
         possimus sit quia error voluptatibus omnis harum. Odio, 
